--- a/.github/workflows/process_metadata.yml
+++ b/.github/workflows/process_metadata.yml
@@ -23,18 +23,19 @@ jobs:
       run: node .github/workflows/extract-metadata.js
       continue-on-error: false
 
-    - name: Check for changes
-      id: check_changes
-      run: |
-        git diff --exit-code || echo "changes=true" >> $GITHUB_OUTPUT
-
     - name: Commit changes
-      if: steps.check_changes.outputs.changes == 'true'
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add datas/
-        git commit -m "Update metadata collection: $(date +'%Y-%m-%d %H:%M:%S')"
-        git push
+
+        # 检查是否有变更
+        if [[ -n "$(git status --porcelain datas/)" ]]; then
+          echo "Changes detected in datas directory"
+          git add datas/
+          git commit -m "Update metadata collection: $(date +'%Y-%m-%d %H:%M:%S')"
+          git push
+        else
+          echo "No changes to commit"
+        fi
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
